--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,8 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+/* styles/globals.css */
+
+html, body, #__next {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background: transparent;
+}
