--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,21 @@
 /* styles/globals.css */
 
-html, body, #__next {
-  height: 100%;
+/* Reset box-sizing and font smoothing */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+body {
   margin: 0;
-  padding: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background: transparent;
+  color: #212121;
 }
