--- a/styles/LandingPage.module.css
+++ b/styles/LandingPage.module.css
@@ -1,6 +1,9 @@
 /* styles/LandingPage.module.css */
 
-.pageWrapper, html, body, #__next {
+.pageWrapper,
+html,
+body,
+#__next {
   height: 100%;
   margin: 0;
   padding: 0;
