--- a/styles/LandingPage.module.css
+++ b/styles/LandingPage.module.css
@@ -1,9 +1,6 @@
 /* styles/LandingPage.module.css */
 
-.pageWrapper,
-html,
-body,
-#__next {
+.pageWrapper {
   height: 100%;
   margin: 0;
   padding: 0;
